--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,6 @@
 
 <ul>
   <li *ngFor="let friend of filteredItems">
-    {{ friend.name }}, {{ friend.id }}
+    {{ friend.name }}, {{ friend.id }}, {{ friend.director }}
   </li>
 </ul>
