--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 </form>
 
 <ul>
-  <li *ngFor="let friend of filteredItems">
+  <li *ngFor="let friend of filteredMovies">
     {{ friend.name }}, {{ friend.id }}, {{ friend.director }}
   </li>
 </ul>
