--- a/src/app/components/movie-list/movie-card/movie-card.component.html
+++ b/src/app/components/movie-list/movie-card/movie-card.component.html
@@ -1,13 +1,2 @@
-<div class="card">
-  <div class="card-header">Id: {{ movie.id }}</div>
-  <div class="card-block">
-    <div class="card-img">
-      <img src="{{ movie.img }}" />
-    </div>
-    <div class="card-title">{{ movie.name }}</div>
-    <div class="card-text">Director: {{ movie.director }}</div>
-  </div>
-  <div class="card-footer">
-    <button class="btn btn-sm btn-link">Details</button>
-  </div>
-</div>
+
+<p>card works!</p>
