--- a/src/app/components/movie-list/movie-list.component.html
+++ b/src/app/components/movie-list/movie-list.component.html
@@ -7,10 +7,22 @@
       </option>
     </select>
   </form>
-  <div class="cards-wrapper">
-    <app-movie-card
+
+  <clr-datagrid>
+    <clr-dg-column>User ID</clr-dg-column>
+    <clr-dg-column>Name</clr-dg-column>
+    <clr-dg-column>Director</clr-dg-column>
+    <clr-dg-column>Genre</clr-dg-column>
+    <clr-dg-row
       *ngFor="let movie of filteredMovies"
-      [movie]="movie"
-    ></app-movie-card>
-  </div>
+      (click)="onClick(movie.id)"
+    >
+      <clr-dg-cell>{{ movie.id }}</clr-dg-cell>
+      <clr-dg-cell>{{ movie.name }}</clr-dg-cell>
+      <clr-dg-cell>{{ movie.director }}</clr-dg-cell>
+      <clr-dg-cell>{{ movie.genres }}</clr-dg-cell>
+    </clr-dg-row>
+
+    <clr-dg-footer>{{ filteredMovies.length }} movies</clr-dg-footer>
+  </clr-datagrid>
 </div>
